@@ -1,3 +1,11 @@
+2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b106
+
+	* Change: Stage 2 of a fix for bug 903936 -
+	  1. Changing all non-AlbumItem references to AlbumItem::isAlbumName
+	     to getAlbumName()
+	  2. Implement isAlbum() in if blocks where determination of an album
+	     is made
+
 2004-03-04  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b105
 
 	* Change: Stage 1 of a fix for bug 903936 -
